--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,15 @@ orbs:
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@0.4.1
 # Orchestrate or schedule a set of jobs
+jobs:
+  print_hello:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run:
+          name: Write Hello
+          command:  |
+          echo "Hello"
 workflows:
   # Name the workflow "welcome"
   welcome:
