--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - run:
           name: Write Hello
           command:  |
-          console.log(Hello)
+          console.log('Hello')
 workflows:
   # Name the workflow "welcome"
   welcome:
