add: the jobs to the workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,21 @@ jobs:
           name: Write Hello
           command: |
             echo "Hello"
+  print_world:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run:
+          name: Write World
+          command: |
+            echo "World"
 workflows:
   # Name the workflow "welcome"
   welcome:
     # Run the welcome/run job in its own container
     jobs:
       - welcome/run
+      - print_hello
+      - print_world:
+          requires: [print_hello]
+
