--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,8 @@ jobs:
           command: |
             echo "World"
   print_github_user:
+    docker:
+      - image: circleci/node:13.8.0
     steps:
       - run:
           name: "echo an env var that is part of our project"
