--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           name: "echo an env var that is part of our project"
           command: |
-            this code was build by echo $GITHUB_USER 
+            echo $GITHUB_USER 
 workflows:
   # Name the workflow "welcome"
   welcome:
