save and restore workspace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,24 @@ jobs:
       - run:
           name: "echo an env var that is part of our project"
           command: |
-            echo $GITHUB_USER 
+            echo $GITHUB_USER
+  save_hello_world_output:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo "hello world" > ~/output.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - output.txt
+
+  print_output_file:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: cat ~/output.txt 
 workflows:
   # Name the workflow "welcome"
   welcome:
@@ -39,4 +56,8 @@ workflows:
       - print_hello
       - print_world:
           requires: [print_hello]
+      - save_hello_world_output
+      - print_output_file
+          requires: [save_hello_world_output]
+
 
