--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,5 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-commands:
-  print_pipeline_id:
-    description: "A very simple command for demonstration purposes"
-    steps:
-      - run: echo $CIRCLE_WORKFLOW_ID
 # Use a package of configuration called an orb.
 orbs:
   # Declare a dependency on the welcome-orb
@@ -50,7 +45,13 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/
-      - run: cat ~/output.txt 
+      - run: cat ~/output.txt
+  print_pipeline_id:
+    commands:
+      print_workflow:
+        description: "A very simple command for demonstration purposes"
+        steps:
+          - run: echo $CIRCLE_WORKFLOW_ID 
 workflows:
   # Name the workflow "welcome"
   welcome:
