--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,12 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 # Use a package of configuration called an orb.
+
+commands:
+      print_workflow:
+        description: "A very simple command for demonstration purposes"
+        steps:
+          - run: echo $CIRCLE_WORKFLOW_ID 
 orbs:
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@0.4.1
@@ -47,11 +53,8 @@ jobs:
           at: ~/
       - run: cat ~/output.txt
   print_pipeline_id:
-    commands:
-      print_workflow:
-        description: "A very simple command for demonstration purposes"
-        steps:
-          - run: echo $CIRCLE_WORKFLOW_ID 
+    steps:
+      - print_workflow  
 workflows:
   # Name the workflow "welcome"
   welcome:
