add: image to the new job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,8 @@ jobs:
           at: ~/
       - run: cat ~/output.txt
   print_pipeline_id:
+    docker:
+      - image: circleci/node:13.8.0
     steps:
       - print_workflow  
 workflows:
