fix: run aws command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,7 @@ jobs:
             sudo apt-get update
             sudo apt install python3-pip
             sudo pip3 install awsebcli --upgrade
-      - run: echo aws iam list-users 
+      - run: aws iam list-users 
 
 workflows:
   # Name the workflow "welcome"
