--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,6 +127,9 @@ jobs:
             aws cloudformation deploy \
               --template-file template.yml \
               --stack-name my-stack
+      - run: return 1
+      - destroy_environment
+        when: on_fail
   # smoke_test:
   #   docker:
   #     - image: alpine:latest
@@ -143,17 +146,17 @@ jobs:
   #           else
   #             return 1
   #           fi
-  smoke_test:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run:
-          name: Simulate error
-          command: |
-            return 1 #simulate an error, cause the job to fail
-      - destroy_environment
-        when: on_fail
+  # smoke_test:
+  #   docker:
+  #     - image: amazon/aws-cli
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Simulate error
+  #         command: |
+  #           return 1 #simulate an error, cause the job to fail
+  #     - destroy_environment
+  #       when: on_fail
 workflows:
   welcome:
       # Run the welcome/run job in its own container 
