--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,7 +129,7 @@ jobs:
               --stack-name my-stack
       - run: return 1
       - destroy_environment
-          when: on_fail
+        when: on_fail
   # smoke_test:
   #   docker:
   #     - image: alpine:latest
@@ -161,7 +161,8 @@ workflows:
   welcome:
       # Run the welcome/run job in its own container 
     jobs:
-        - create_infrastructure
+      -build
+      # - create_infrastructure
       # - configure_infrastructure
       # - smoke_test
       # - print_pipeline_id
