--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,12 @@ version: 2.1
 # Use a package of configuration called an orb.
 
 commands:
-      print_workflow:
-        description: "A very simple command for demonstration purposes"
-        steps:
-          - run: echo $CIRCLE_WORKFLOW_ID
-      destroy_environment:
-        - run:
-            name: Destroy enviroment
-            command: |
-              aws cloudformation delete-stack --stack-name prod-${CIRCLE_WORKFLOW_ID}
+  destroy_environment:
+    - run:
+        name: Destroy enviroment
+        command: |
+          aws cloudformation delete-stack \
+          --stack-name prod-${CIRCLE_WORKFLOW_ID}
 orbs:
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@0.4.1
