--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,13 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
 
 commands:
   destroy_environment:
-    - run:
-        name: Destroy enviroment
-        command: |
-          aws cloudformation delete-stack \
-          --stack-name prod-${CIRCLE_WORKFLOW_ID}
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+    steps:
+      - run:
+          name: Destroy environment
+          command: |
+            aws cloudformation delete-stack --stack-name prod-${CIRCLE_WORKFLOW_ID}
+
 jobs:
   create_infrastructure:
     docker:
@@ -20,34 +15,18 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Ensure backend infrastructure exist
+          name: Create Stack
           command: |
             aws cloudformation deploy \
               --template-file template.yml \
-              --stack-name my-stack
+              --stack-name prod-${CIRCLE_WORKFLOW_ID}
       - run: return 1
       - destroy_environment
         when: on_fail
+
 workflows:
-  welcome:
-      # Run the welcome/run job in its own container 
+  my_workflow:
     jobs:
-      -build
-      # - create_infrastructure
-      # - configure_infrastructure
-      # - smoke_test
-      # - print_pipeline_id
-      #- print_github_user
-      #- print_hello
-      #- print_message_on_fail
-      #- print_world:
-      #   requires: [print_hello]
-      #- save_hello_world_output
-      #- print_output_file:
-      #    requires: [save_hello_world_output]
-      #- save_inventory_output
-      #- aws_output
-      #- create_infrastructure
-      #- configure_infrastructure
+      - build
 
 
