--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,11 +21,8 @@ jobs:
               --template-file template.yml \
               --stack-name prod-${CIRCLE_WORKFLOW_ID}
       - run: return 1
-      - run:
-          name: Destroy environment
-          command: |
-            aws cloudformation delete-stack --stack-name prod-${CIRCLE_WORKFLOW_ID}
-          when: on_fail
+      - destroy_environment
+        when: on_fail
 
 workflows:
   my_workflow:
